--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
-env:
-  - PHP_CONFIG_FLAGS="--with httpd24 --with libgd"
 install:
   - wget "https://github.com/gboddin/upsalter/releases/download/0.2.3/centos-6-rootfs-salted.tar.bz2"
   - mkdir centos-6
   - tar -C centos-6 -xjvf centos-6-rootfs-salted.tar.bz2
 script:
-  - echo $PHP_CONFIG_FLAGS|grep && ./centos-6/proot -b $(pwd):/root/build -b /etc/hosts -b /etc/hostname -b /etc/resolv.conf -b /dev -w /root/build -r centos-6 -0 /bin/bash /root/build/build-redis.sh
-  - echo $PHP_CONFIG_FLAGS|grep -q httpd24 && ./centos-6/proot -b $(pwd):/root/build -b /etc/hosts -b /etc/hostname -b /etc/resolv.conf -b /dev -w /root/build -r centos-6 -0 rpm -Uvh /root/build/RPMS/$(uname -m)/*.rpm
+  - ./centos-6/proot -b $(pwd):/root/build -b /etc/hosts -b /etc/hostname -b /etc/resolv.conf -b /dev -w /root/build -r centos-6 -0 /bin/bash /root/build/build-redis.sh
+  - ./centos-6/proot -b $(pwd):/root/build -b /etc/hosts -b /etc/hostname -b /etc/resolv.conf -b /dev -w /root/build -r centos-6 -0 rpm -Uvh /root/build/RPMS/$(uname -m)/*.rpm
 before_deploy:
   - export RELEASE_PKG_FILE=$(ls RPMS/`uname -m`/*.rpm)
   - echo "deploying $RELEASE_PKG_FILE to GitHub releases"
