--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 install:
   - wget "https://github.com/gboddin/upsalter/releases/download/0.2.3/centos-6-rootfs-salted.tar.bz2"
   - mkdir centos-6
-  - tar -C centos-6 -xjvf centos-6-rootfs-salted.tar.bz2
+  - tar -C centos-6 -xjf centos-6-rootfs-salted.tar.bz2
 script:
   - ./centos-6/proot -b $(pwd):/root/build -b /etc/hosts -b /etc/hostname -b /etc/resolv.conf -b /dev -w /root/build -r centos-6 -0 /bin/bash /root/build/build-redis.sh
   - ./centos-6/proot -b $(pwd):/root/build -b /etc/hosts -b /etc/hostname -b /etc/resolv.conf -b /dev -w /root/build -r centos-6 -0 rpm -Uvh /root/build/RPMS/$(uname -m)/*.rpm
